# financial-history-builder

./: .gitignore  Cargo.toml  GEMINI_PROMPT_EXAMPLE.md  README.md  plan.md  test_chart_of_accounts.md
examples/: README.md  chat_with_docs.rs  debug_test.rs  forecasting_workflow.rs  gemini_extraction.rs  gemini_pdf_example.rs  intra_year_demo.rs  trial_balance_import.rs
src/: balancer.rs  chart_of_accounts.rs  engine.rs  error.rs  ingestion.rs  lib.rs  overrides.rs  schema.rs  seasonality.rs  utils.rs
src/llm/: assistant.rs  client.rs  extractor.rs  forecasting.rs  mod.rs  prompts.rs  types.rs  utils.rs
tests/: integration_tests.rs
