[package]
name = "financial-history-builder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for converting sparse financial data into dense monthly time series with mathematical integrity"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono"] }
rand = "0.8"
rand_distr = "0.4"
splines = "4.2"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
anyhow = "1.0"
csv = "1.3"
# AI and Async Runtime for examples
async-openai = "0.26.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
