[package]
name = "financial-history-builder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for converting sparse financial data into dense monthly time series with mathematical integrity"
license = "MIT"

[features]
default = []
gemini = ["dep:reqwest", "dep:tokio", "dep:base64", "dep:mime_guess", "dep:json-patch", "dep:async-recursion"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono"] }
rand = "0.8"
rand_distr = "0.4"
splines = "5.0"
thiserror = "2.0.17"
log = "0.4"
json-patch = { version = "3.0", optional = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = { version = "0.22", optional = true }
mime_guess = { version = "2.0", optional = true }
async-recursion = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
csv = "1.3"
async-openai = "0.30.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12.24", features = ["json", "stream", "multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
futures = "0.3"
