[package]
name = "financial-history-builder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for converting sparse financial data into dense monthly time series with mathematical integrity"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["chrono04"] }
rand = "0.9.2"
rand_distr = "0.5"
splines = "5.0"
thiserror = "2.0.17"
log = "0.4"
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
gemini-structured-output = { git = "https://github.com/noahbclarkson/gemini-structured-output" }
gemini-rust = { git = "https://github.com/flachesis/gemini-rust" }

[dev-dependencies]
anyhow = "1.0"
csv = "1.3"
dotenv = "0.15"
tokio-util = { version = "0.7", features = ["io"] }

[[example]]
name = "chat_with_docs"
path = "examples/chat_with_docs.rs"

[[example]]
name = "gemini_pdf_example"
path = "examples/gemini_pdf_example.rs"

[[example]]
name = "forecasting_workflow"
path = "examples/forecasting_workflow.rs"
